--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
     "build": "next build --turbopack",
-    "start": "next start",
-    "lint": "eslint"
+    "dev": "next dev --turbopack",
+    "lint": "eslint",
+    "start": "next start"
   },
   "dependencies": {
     "@tabler/icons-react": "^3.35.0",
@@ -20,6 +20,7 @@
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sst": "3.17.14",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
